public class Bird extends Animal {


    public Bird(int age, char gender, int weightInPounds) {
        super(age, gender, weightInPounds);
    }

}
